--- a/app/src/main/res/drawable/taiwan.xml
+++ b/app/src/main/res/drawable/taiwan.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape= "rectangle">
-    <solid android:color="#CCCC66"/>
+    <solid android:color="#c9bc9c"/>
     <corners android:radius="200dp" />
     <stroke android:width="0.5dp" />
 </shape>
