--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -36,6 +36,8 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/taiwan"
         android:text="台灣PM2.5"
+        android:textColor="#6b5d4f"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -52,6 +54,8 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/taiwan"
         android:text="工廠資訊"
+        android:textColor="#6b5d4f"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
